# fractal_service

./: .gitignore  README.md  host_file  makefile  run.sh  run_bench.sh  run_manager.sh  setup_server.sh  setup_station.sh  stop_server.sh  stop_station.sh
benchmark/: makefile
benchmark/src/: main.cpp
cluster/: makefile
cluster/inc/: Color.h  FractalService.h  Surface.h
cluster/inc/MPI/: Agent.h  Master.h  Messages.h  Slave.h
cluster/src/: FractalService.cpp  Surface.cpp  main.cpp
cluster/src/MPI/: Agent.cpp  Master.cpp  Slave.cpp
common/: makefile
common/inc/: RGB.h
common/inc/Net/: Client.h  Data.h  Server.h
common/src/: Logger.cpp
common/src/Net/: Client.cpp  Server.cpp  Socket.cpp
inc/: Color.h  Complex.h  Fractal.h  FractalService.h  Surface.h  Window.h
inc/MPI/: Agent.h  Master.h  Messages.h  Slave.h
inc/Net/: Client.h  Server.h
manager/: CMakeLists.txt  makefile
manager/inc/: Client.h  Logger.h  Socket.h  mainwindow.h
manager/src/: Client.cpp  Socket.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
src/: Fractal.cpp  FractalService.cpp  Logger.cpp  Surface.cpp  main.cpp  test.cpp
src/MPI/: Agent.cpp  Master.cpp  Slave.cpp
src/Net/: Client.cpp  Server.cpp  Socket.cpp
src_cl/: mandelbrot.cl
